# rabbithole-rag

./: .gitignore  README.md  pyproject.toml
backend/: chroma.py  database.py  db_seed.py  main.py  models.py  requirements.txt
backend/chroma/: chroma.sqlite3
backend/chroma/1fd3c40b-28ca-4f7c-8b14-a69209a9465d/: index_metadata.pickle
backend/chroma/d56b6f1e-6298-452c-bea2-e54a4f92dfb8/: index_metadata.pickle
backend/routers/: notebooks.py  query.py  sources.py
data/: questions.txt
data/notebooks/3061c53f-5f42-4148-a8ff-73648859ac21/: Nietzsche_The_Greek_State.txt
data/notebooks/ed6a75a2-8dd3-4607-af02-c320744410c1/: Beyond_Good_And_Evil_Nietzsche.txt
data/seed/: Nietzsche_Beyond_Good_And_Evil.txt  Nietzshe_Bio.txt
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: llm.ts  notebooks.ts
frontend/src/components/: AppSidebar.tsx  LLMInputGroup.tsx  Layout.tsx  MessageBubble.tsx  NewNotebookAlert.tsx  NewNotebookButton.tsx  NotebookProvider.tsx  NotebookSwitcher.tsx  UploadSourceAlert.tsx  UploadSourceButton.tsx
frontend/src/types/: index.ts
